--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "prisma": "^6.16.1",
     "uuid": "^13.0.0",
     "zod": "^4.1.8"
@@ -31,6 +34,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.3",
+    "@types/passport-google-oauth20": "^2.0.16",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
