--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pino-pretty": "^13.1.1",
     "prisma": "^6.16.1",
     "uuid": "^13.0.0",
+    "xendit-node": "^7.0.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
