--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "pino": "^9.9.5",
     "pino-pretty": "^13.1.1",
     "prisma": "^6.16.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^13.0.0",
     "xendit-node": "^7.0.0",
     "zod": "^4.1.8"
